synth tweaks, piano css, and bug fixes
* trying a different synth voice
* block overlapping chord play
* fixed piano css

--- a/src/index.css
+++ b/src/index.css
@@ -88,8 +88,10 @@ code {
 	margin-top: 0;
 }
 
+
 .chordPiano {
 	margin-top: 0em;
+	padding-right: 2em;
 	position: relative;
 	display: flex;
 }
