--- a/src/styles/Piano.css
+++ b/src/styles/Piano.css
@@ -60,6 +60,7 @@ ul .white:active {
 	height: 5em;
 	width: 1.5em;
 	margin: 0 0 0 -1em;
+	right: 0.2em;
 	z-index: 2;
 	border: 1px solid #000;
 	border-radius: 0 0 3px 3px;
@@ -82,12 +83,18 @@ ul .white:active {
 	margin: 0 0 0 -1em;
 }
 
-ul li:first-child {
-	border-radius: 5px 0 5px 5px;
+.F, .C {
+	width: 2.3em !important; 
 }
 
-ul li:last-child {
-	border-radius: 0 5px 5px 5px;
+.E, .B {
+	margin-right: -8px;
+}
+
+.B-2{
+	border-radius: 5px 0 5px 5px !important;
+	width: 2em !important;
+	margin-right: 0.0em;
 }
 
 .pianoCloseButton {
